--- a/app/assets/templates/form.html
+++ b/app/assets/templates/form.html
@@ -17,11 +17,12 @@
               <span class="error_message" ng-show="userform.name.$touched && userform.name.$error.required">Name is required.</span>
             </div>
             <div class="form-group">
-              <label for="email">Email:</label>{{userform.$error.isDuplicatedEmail}}
+              <label for="email">Email:</label>
               <input type="email" name="email" class="form-control" id="email" ng-model="user.email" placeholder="Enter email" required
-              ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" check-email>
+              ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/" data-wc-unique="{key: user.id, property: 'email'}">
               <span class="error_message" ng-show="userform.email.$touched && userform.email.$error.required">Email is required.</span>
                <span class="error_message" ng-show="userform.email.$touched && userform.email.$error.pattern">Email is invalid.</span>
+               <span class="error_message" ng-show="userform.email.$touched && userform.email.$error.unique">Email is already taken.</span>
 
             </div>
              <div class="form-group">
