--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -43,6 +43,12 @@
   </tr>
 </table>
 </div>
+<div paging
+  page="page_no" 
+  page-size="page_size" 
+  total="total"
+  paging-action="paginate(page)">
+</div> 
 
  <div ng-include="'form.html'"></div>
 
