add date picker

--- a/app/assets/templates/form.html
+++ b/app/assets/templates/form.html
@@ -32,7 +32,7 @@
                 <div class="input-group">
                     <input class="form-control" placeholder="Choose a date" ng-model="user.dob" placeholder="Enter dob" required/>
                     <span class="input-group-addon" style="cursor: pointer">
-                    <i class="fa fa-lg fa-calendar"></i>
+                      <i class="glyphicon glyphicon-calendar"></i>
                     </span>
                 </div>
               </datepicker>
