--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div ng-app="angularRailsStuff" class="container">
+	<div ng-app="angularRailsStuff">
 	<%= yield %>
 	</div>
 </body>
