--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,5 +1,5 @@
 <div ng-if="loader" class="overlay">
-  <img src="assets/loading.gif">
+  <img src="loading.gif">
 </div>
 <div class="container">
   <div class="row">
