--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,5 +1,5 @@
 <div ng-if="loader" class="overlay">
-  <img src="loading.gif">
+  <img src="assets/loading.gif">
 </div>
 <div class="container">
   <div class="row">
@@ -39,14 +39,39 @@
        <th>Actions</th>
      </tr>
      <tr ng-repeat="user in users | orderBy:OrderByField:reverseSort | filter:search">
-      <td>{{user.name}}</td>
-      <td>{{user.email}}</td> 
-      <td>{{user.dob}}</td>
-      <td><a href="" ng-click="editUser(user)" data-toggle="modal" data-target="#myModal">Edit</a> | <a href="" ng-click="deleteUser(user)">Delete</a> </td>
+       <td>
+          <span editable-text="user.name" e-name="name" e-form="rowform" onbeforesave="checkName($data, user.id)" e-required>
+            {{ user.name || 'empty' }}
+          </span>
+        </td>
+        <td>
+          <span editable-text="user.email" e-name="email" e-form="rowform" onbeforesave="checkName($data, user.id)" e-required>
+            {{ user.email || 'empty' }}
+          </span>
+        </td>
+        <td>
+          <span editable-text="user.dob" e-name="dob" e-form="rowform" onbeforesave="checkName($data, user.id)" e-required>
+            {{ user.dob || 'empty' }}
+          </span>
+        </td>
+  
+      <td style="white-space: nowrap">
+         <form editable-form name="rowform" onbeforesave="updateUser($data,user.id)" ng-show="rowform.$visible" class="form-buttons form-inline" shown="inserted == user">
+          <button type="submit" ng-disabled="rowform.$waiting" class="btn btn-primary">
+            save
+          </button>
+          <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="btn btn-default">
+            cancel
+          </button>
+        </form>
+        <div class="buttons" ng-show="!rowform.$visible">
+          <button class="btn btn-primary" ng-click="rowform.$show()">edit</button>
+          <button class="btn btn-danger" ng-click="deleteUser(user.id)">delete</button>
+        </div>  
+      </td>
     </tr>
   </table>
 </div>
-
 <!-- https://github.com/brantwills/Angular-Paging -->
 <div paging
 page="page_no" 
