check sass syntax

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "angular-datepicker";
-@import "xeditable"
+@import "xeditable";
 
 * {
   margin: 0;
