implement infinite scrolling

--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -1,6 +1,7 @@
 <div ng-if="loader" class="overlay">
   <img src="loading.gif">
 </div>
+<a href="/product_list"> Go to Products</a>
 <div class="container">
   <div class="row">
     <div class="col-md-7">
