--- a/app/assets/templates/product_list.html
+++ b/app/assets/templates/product_list.html
@@ -1,9 +1,9 @@
-<a href="/">Go to users list </a>
 <div ng-if="loader" class="overlay">
   <img src="loading.gif">
 </div>
-
-<table class="table table-striped">
+<a href="/">Home</a>
+<div class="container">
+  <table class="table table-striped">
   <thead>
     <tr>
       <th>Name</th>
@@ -21,3 +21,4 @@
     </tr>
   </tbody>
 </table>
+</div>
