--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-md-3">
       <div class="angular">
-        <img src="assets/angularjs.png" width="86px">
+        <img src="angularjs.png" width="86px">
       </div>
       </div>
        <div class="col-md-6">
@@ -13,7 +13,7 @@
       </div>
        <div class="col-md-3">
        <div class="ruby pull-right">
-        <img src="assets/ruby.png" width="45px">
+        <img src="ruby.png" width="45px">
       </div>
       </div>
     </div> 
