draggable functionality included

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,3 +35,8 @@
     -webkit-transform: translateY(-50%);
   }
 }
+._720kb-datepicker-open{
+  width: 280px !important;
+  right: 0;
+  top: 38px;
+}
