--- a/app/assets/templates/form.html
+++ b/app/assets/templates/form.html
@@ -50,3 +50,10 @@
       
     </div>
   </div>
+<!--   <style type="text/css">
+    ._720kb-datepicker-open{
+   width: 280px !important;
+   right: 0;
+   top: 38px;
+}
+  </style> -->
