--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -22,66 +22,66 @@
 <div class="container heading-tile">
   <div class="row text-center rowdata">
     <div class="col-md-3">
-      <div class="tile" style="background:#A62800">
+      <div draggable class="tile" style="background:#A62800">
         <h2><a href="/users_list">X-Editable</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#0B7F34">
+      <div draggable class="tile" style="background:#0B7F34">
         <h2><a href="/product_list">Infinite Scroll</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#65bcda">
+      <div draggable class="tile" style="background:#65bcda">
         <h2><a href="/">File Uploads</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#074F68">
+      <div draggable class="tile" style="background:#074F68">
         <h2><a href="/">Forms</a></h2>
       </div>
     </div>
   </div>
   <div class="row text-center rowdata">
     <div class="col-md-3">
-      <div class="tile" style="background:#3B3E43">
+      <div draggable class="tile" style="background:#3B3E43">
         <h2><a href="/users_list">X-Editable</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#67B636">
+      <div draggable class="tile" style="background:#67B636">
         <h2><a href="/product_list">Infinite Scroll</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#2570A9">
+      <div draggable class="tile" style="background:#2570A9">
         <h2><a href="/">File Uploads</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#A62800">
+      <div draggable class="tile" style="background:#A62800">
         <h2><a href="/">Forms</a></h2>
       </div>
     </div>
   </div>
   <div class="row text-center rowdata">
     <div class="col-md-3">
-      <div class="tile" style="background:#0B7F34">
+      <div draggable class="tile" style="background:#0B7F34">
         <h2><a href="/users_list">X-Editable</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#074F68">
+      <div draggable class="tile" style="background:#074F68">
         <h2><a href="/product_list">Infinite Scroll</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#3B3E43">
+      <div draggable class="tile" style="background:#3B3E43">
         <h2><a href="/">File Uploads</a></h2>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="tile" style="background:#67B636">
+      <div draggable class="tile" style="background:#67B636">
         <h2><a href="/">Forms</a></h2>
       </div>
     </div>
