--- a/app/assets/templates/users_list.html
+++ b/app/assets/templates/users_list.html
@@ -2,6 +2,10 @@
   <img src="loading.gif">
 </div>
  <div class="container">
+ <ul class="breadcrumb" style="margin-top:20px;width:150px;">
+    <li><a href="/">Home</a></li>
+     <li class="active">Users</li>
+</ul>
   <div class="row">
     <div class="col-md-7">
       <h1>List of users</h1>
