--- a/app/assets/templates/product_list.html
+++ b/app/assets/templates/product_list.html
@@ -1,8 +1,12 @@
 <div ng-if="loader" class="overlay">
   <img src="loading.gif">
 </div>
-<a href="/">Home</a>
-<div class="container">
+ <div class="container">
+<ul class="breadcrumb" style="margin-top:20px;width:150px;">
+    <li><a href="/">Home</a></li>
+     <li class="active">Products</li>
+</ul>
+<h1>List of Products</h1>
   <table class="table table-striped">
   <thead>
     <tr>
