--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -21,21 +21,31 @@
 </header>
 <div class="container heading-tile">
   <div class="row text-center rowdata">
+    
     <div class="col-md-3">
       <div draggable class="tile" style="background:#A62800">
         <h2><a href="/users_list">X-Editable</a></h2>
       </div>
     </div>
+    
     <div class="col-md-3">
       <div draggable class="tile" style="background:#0B7F34">
         <h2><a href="/product_list">Infinite Scroll</a></h2>
       </div>
     </div>
+    
     <div class="col-md-3">
       <div draggable class="tile" style="background:#65bcda">
         <h2><a href="/actor_upload">File Uploads</a></h2>
       </div>
     </div>
+    
+    <div class="col-md-3">
+      <div draggable class="tile" style="background:#A62800">
+        <h2><a href="/actor_list">Carousel</a></h2>
+      </div>
+    </div>
+  
   </div>
 </div> 
 <footer>
