add breadcrumb for carousel page

--- a/app/assets/templates/actor_list.html
+++ b/app/assets/templates/actor_list.html
@@ -1,4 +1,9 @@
   <div class="container"> 
+   
+ <ul class="breadcrumb" style="margin-top:20px;width:150px;">
+    <li><a href="/">Home</a></li>
+     <li class="active">Carousel</li>
+</ul>
     <!-- Carousel
         ================================================== -->
     <div id="myCarousel" class="carousel slide" data-ride="carousel"> 
