add a simple form with validation

--- a/app/assets/templates/index.html
+++ b/app/assets/templates/index.html
@@ -45,6 +45,12 @@
         <h2><a href="/actor_list">Carousel</a></h2>
       </div>
     </div>
+
+    <div class="col-md-3">
+      <div draggable class="tile" style="background:#0B7F36">
+        <h2><a href="/test_form">Simple Form Validation</a></h2>
+      </div>
+    </div>
   
   </div>
 </div> 
